@@ -1,5 +1,6 @@
 [R5.1.0]
 SyncProxyTester:
++ Add dialog for SetGlobalProperties command's helpPrompt and timeoutPrompt values.
 * Fix a rare crash when creating a command after resuming the app.
 * Fix sending CreateChoiceSet command by adding image values.
 + The user can specify position when creating Slider request.
